# sample-python-project

./: .gitignore  README.md  pyproject.toml
sample_python_project/: cmdline.py
tests/: test_cmdline.py
