[tool.poetry]
name = "sample-python-project"
version = "0.1.0"
description = ""
authors = ["Elton Zheng <elton.zheng.sh@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_python_project"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true